bynkc/tests/fixtures/positive/42_match_with_wildcard/input.bynk
commons test {
  type Status = enum { Pending, Active, Done }

  fn isPending(s: Status) -> Bool {
    match s {
      Pending => true
      _ => false
    }
  }
}
