bynkc/tests/fixtures/negative/34_match_branch_type_mismatch/input.bynk
commons test {
  type Status = enum { Pending, Active, Done }

  fn bad(s: Status) -> String {
    match s {
      Pending => "p"
      Active => 1
      Done => "d"
    }
  }
}
